Login Enter - Navbar casi se puede lo de cambiar el color al seleccionar una opcion

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: rgb(250, 240, 210);">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="src/assets/img/pollomaxlogo.jpg" />
