--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Allerta&amp;display=swap">
     <title>Pollos Max</title>
   </head>
-  <body style="background: rgb(250, 240, 210);">
+  <body style="background: rgb(250, 240, 210); min-width: 100%;">
       <!-- <body class="text-center d-lg-flex flex-fill justify-content-center align-items-center align-content-center align-self-center flex-nowrap justify-content-lg-center align-items-lg-center" style="background: rgb(250, 240, 210); border-color: rgb(117, 42, 116); border-top-color: rgb(117, 42, 116); border-right-color: rgb(42, 116, 42); border-bottom-color: rgb(42, 116, 116); border-left-color: rgb(42, 116, 42);"  > -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
